--- a/springs/spring/advisor/pom.xml
+++ b/springs/spring/advisor/pom.xml
@@ -3,13 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
-        <groupId>com.payno.springGuide</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <artifactId>core</artifactId>
+        <groupId>com.payno.guides.springs.spring</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>advisor</artifactId>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
