把另一个也移动进来了

--- a/springs/spring/pom.xml
+++ b/springs/spring/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>advisor</module>
         <module>converter</module>
+        <module>base</module>
     </modules>
 
     <parent>
