--- a/algorithms/pom.xml
+++ b/algorithms/pom.xml
@@ -4,22 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.payno</groupId>
-    <artifactId>guides</artifactId>
+    <groupId>com.payno.guides</groupId>
+    <artifactId>algorithms</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
-    <modules>
-        <module>securitys</module>
-        <module>clouds</module>
-        <module>springs</module>
-        <module>utils</module>
-        <module>servers</module>
-        <module>javas</module>
-        <module>algorithms</module>
-    </modules>
 </project>
