对于JSR107Cache有所了解 查看了spring.cache.core的架构 但是还没有看cache.aop相关的部分

--- a/springs/pom.xml
+++ b/springs/pom.xml
@@ -23,5 +23,6 @@
         <module>task</module>
         <module>transaction</module>
         <module>webmvc</module>
+        <module>cache</module>
     </modules>
 </project>
