1.迁移了旧的netty代码 2.了解netty的线程控制相关的大概设计

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -19,5 +19,6 @@
         <module>mapstruct</module>
         <module>rxJava</module>
         <module>swagger</module>
+        <module>netty</module>
     </modules>
 </project>
