--- a/servers/mqs/amqp/pom.xml
+++ b/servers/mqs/amqp/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
             <version>RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
