--- a/algorithms/pom.xml
+++ b/algorithms/pom.xml
@@ -12,4 +12,12 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+    </dependencies>
 </project>
