--- a/utils/mapstruct/pom.xml
+++ b/utils/mapstruct/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.payno.guides.utils</groupId>
     <artifactId>mapstruct</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
+    <modules>
+        <module>joor</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
