Guava Hash Escaper Iterators Iterables
Spring Retry Framework
     有时间看下RetryTemplate的doExecute方法
     这是Spring框架里最简单的两个Template了（另一个是JdbcTemplate）
     CallBack
     Context
     Listener
     Cache
     SynchronizeManager

TCP 协议学习

方法引用会出的一个问题

--- a/springs/pom.xml
+++ b/springs/pom.xml
@@ -24,5 +24,6 @@
         <module>transaction</module>
         <module>webmvc</module>
         <module>cache</module>
+        <module>retry</module>
     </modules>
 </project>
