AmqpListeners GenericResolver Zookeeper LeaderLatch,LeaderSelector Guava Retry Kafka FastStart

--- a/servers/mqs/pom.xml
+++ b/servers/mqs/pom.xml
@@ -13,5 +13,6 @@
         <module>rocketmq</module>
         <module>amqp</module>
         <module>jms</module>
+        <module>kafka</module>
     </modules>
 </project>
