--- a/servers/mqs/amqp/pom.xml
+++ b/servers/mqs/amqp/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.2.7.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
     </dependencies>
 
 </project>
