--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -22,5 +22,6 @@
         <module>netty</module>
         <module>joor</module>
         <module>mockito</module>
+        <module>guava</module>
     </modules>
 </project>
