--- a/springs/advisor/pom.xml
+++ b/springs/advisor/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>core</artifactId>
-        <groupId>com.payno.guides.springs.spring</groupId>
-        <version>1.0</version>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.2.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
