--- a/springs/pom.xml
+++ b/springs/pom.xml
@@ -19,11 +19,12 @@
         <module>spi-api</module>
         <module>https</module>
         <module>session</module>
-        <module>spring</module>
+        <module>advisor</module>
         <module>task</module>
         <module>transaction</module>
         <module>webmvc</module>
         <module>cache</module>
         <module>retry</module>
+        <module>base</module>
     </modules>
 </project>
