Spring4 Guide How to invoke autowire/init bean on runtime(but it does not work when demo,through works in app!!!!is a bug?maybe i can try to find the reason!) How to inject bean on runtime

--- a/springs/pom.xml
+++ b/springs/pom.xml
@@ -26,5 +26,6 @@
         <module>cache</module>
         <module>retry</module>
         <module>base</module>
+        <module>spring-version</module>
     </modules>
 </project>
