--- a/springs/webmvc/pom.xml
+++ b/springs/webmvc/pom.xml
@@ -81,7 +81,28 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.payno</groupId>
+            <artifactId>mock-server-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.qingqing</groupId>
+                    <artifactId>qingqing-springboot-starter</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>com.qingqing</groupId>
+                    <artifactId>qingqing-starter</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>com.qingqing.api</groupId>
+                    <artifactId>spring-web-util</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
