easy singleton supplier of spring! Spring 工具类 []Utils abstract + final static Guava 工具类 []s final + private + final static Sentinel 工具类 []U I like Guava more！

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,6 @@
         <module>servers</module>
         <module>javas</module>
         <module>algorithms</module>
-        <module>springs/spring4</module>
+        <module>puava</module>
     </modules>
 </project>
