--- a/puava/pom.xml
+++ b/puava/pom.xml
@@ -10,12 +10,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>puava</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava-parent</artifactId>
-            <version>29.0-jre</version>
+            <version>28.0-jre</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.2.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.payno.guides.springs.spring</groupId>
+            <artifactId>webmvc</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 </project>
