--- a/puava/pom.xml
+++ b/puava/pom.xml
@@ -41,5 +41,11 @@
             <artifactId>webmvc</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.qingqing.ta</groupId>
+            <artifactId>protobuf-fullcrmsvc</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
